{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 32,
  "lineage": "7b56893c-d84f-6e17-acc5-8d9f4dc27d04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07a12ce9ba34aac5b",
            "domain": "vpc",
            "id": "eipalloc-04a81ddba8bae68bd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03f0f2a9b2620890a",
            "private_dns": "ip-192-168-18-117.ec2.internal",
            "private_ip": "192.168.18.117",
            "public_dns": "ec2-54-196-158-30.compute-1.amazonaws.com",
            "public_ip": "54.196.158.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EKS-EIP-1",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b62309f4eebd8656",
            "domain": "vpc",
            "id": "eipalloc-00f1dff857bd1a024",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e94200d349496c0d",
            "private_dns": "ip-192-168-89-199.ec2.internal",
            "private_ip": "192.168.89.199",
            "public_dns": "ec2-3-224-14-135.compute-1.amazonaws.com",
            "public_ip": "3.224.14.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EKS-EIP-2",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065910323789:internet-gateway/igw-00f2a4f5646e99a7f",
            "id": "igw-00f2a4f5646e99a7f",
            "owner_id": "065910323789",
            "tags": {
              "Name": "EKS-Internet-Gateway",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc_id": "vpc-0b1815c448f622626"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a81ddba8bae68bd",
            "id": "nat-0cdb90a99060eb881",
            "network_interface_id": "eni-03f0f2a9b2620890a",
            "private_ip": "192.168.18.117",
            "public_ip": "54.196.158.30",
            "subnet_id": "subnet-0bd3eb9f0ff099dea",
            "tags": {
              "Name": "EKS-NatGateway-1",
              "kubernetes.io/cluster/EKSCluster": "shared"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_1_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f1dff857bd1a024",
            "id": "nat-09613e160f4b23a7b",
            "network_interface_id": "eni-0e94200d349496c0d",
            "private_ip": "192.168.89.199",
            "public_ip": "3.224.14.135",
            "subnet_id": "subnet-0783aacdca60dfec6",
            "tags": {
              "Name": "EKS-NatGateway-2",
              "kubernetes.io/cluster/EKSCluster": "shared"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_2_eip",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e54a18d69ea03e0e",
            "owner_id": "065910323789",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cdb90a99060eb881",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EKS Private Route 1",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc_id": "vpc-0b1815c448f622626"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-056734e09d1e552e5",
            "owner_id": "065910323789",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09613e160f4b23a7b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EKS Private Route 2",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc_id": "vpc-0b1815c448f622626"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b10fae855ce854f9",
            "owner_id": "065910323789",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f2a4f5646e99a7f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EKS Public Route",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc_id": "vpc-0b1815c448f622626"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_rtb_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce619fd84c034a92",
            "route_table_id": "rtb-0e54a18d69ea03e0e",
            "subnet_id": "subnet-04283f8cccbd8f26e"
          },
          "dependencies": [
            "aws_eip.nat_gateway_1_eip",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.private_route_table_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_rtb_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094635e10165872e5",
            "route_table_id": "rtb-056734e09d1e552e5",
            "subnet_id": "subnet-08ddef254f036688f"
          },
          "dependencies": [
            "aws_eip.nat_gateway_2_eip",
            "aws_nat_gateway.nat_gw_2",
            "aws_route_table.private_route_table_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rtb_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0579c38affacd36c7",
            "route_table_id": "rtb-0b10fae855ce854f9",
            "subnet_id": "subnet-0bd3eb9f0ff099dea"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rtb_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9a7e1a6e9256b28",
            "route_table_id": "rtb-0b10fae855ce854f9",
            "subnet_id": "subnet-0783aacdca60dfec6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065910323789:security-group/sg-0dda50880aeb00d2e",
            "description": "Allow Traffic for EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dda50880aeb00d2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "EKS Security Group",
            "name_prefix": "",
            "owner_id": "065910323789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS Security Group",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1815c448f622626"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065910323789:subnet/subnet-04283f8cccbd8f26e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.128.0/18",
            "id": "subnet-04283f8cccbd8f26e",
            "map_public_ip_on_launch": false,
            "owner_id": "065910323789",
            "tags": {
              "Name": "EKS-Private-Subnet-1",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc_id": "vpc-0b1815c448f622626"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065910323789:subnet/subnet-08ddef254f036688f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.192.0/18",
            "id": "subnet-08ddef254f036688f",
            "map_public_ip_on_launch": false,
            "owner_id": "065910323789",
            "tags": {
              "Name": "EKS-Private-Subnet-2",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc_id": "vpc-0b1815c448f622626"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065910323789:subnet/subnet-0bd3eb9f0ff099dea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/18",
            "id": "subnet-0bd3eb9f0ff099dea",
            "map_public_ip_on_launch": true,
            "owner_id": "065910323789",
            "tags": {
              "Name": "EKS-Public-Subnet-1",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc_id": "vpc-0b1815c448f622626"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065910323789:subnet/subnet-0783aacdca60dfec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.64.0/18",
            "id": "subnet-0783aacdca60dfec6",
            "map_public_ip_on_launch": true,
            "owner_id": "065910323789",
            "tags": {
              "Name": "EKS-Public-Subnet-2",
              "kubernetes.io/cluster/EKSCluster": "shared"
            },
            "vpc_id": "vpc-0b1815c448f622626"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065910323789:vpc/vpc-0b1815c448f622626",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02dd20765572783ac",
            "default_route_table_id": "rtb-021f909d1d98fc901",
            "default_security_group_id": "sg-006b411c1c407e4ef",
            "dhcp_options_id": "dopt-c1a2d9bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b1815c448f622626",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-021f909d1d98fc901",
            "owner_id": "065910323789",
            "tags": {
              "Name": "EKS-VPC",
              "kubernetes.io/cluster/EKSCluster": "shared"
            }
          }
        }
      ]
    }
  ]
}